Fix for text navbar links wrapping.

--- a/sites/all/themes/openscholar/scholar_density/scholar-density.css
+++ b/sites/all/themes/openscholar/scholar_density/scholar-density.css
@@ -243,6 +243,7 @@ p.copy a.poweredby {
   margin-bottom: 3px;
   display:block;
   background: rgba(210, 218, 184, 0.76);
+  white-space: nowrap;
   }
 
 #sidebar-first ul.menu li a:hover {
